--- a/language/nb.json
+++ b/language/nb.json
@@ -28,7 +28,7 @@
       "fields": [
         {
           "label": "Introduction",
-          "description": "You can optionally leave the students some explanations about your sample.",
+          "description": "You can optionally leave the students some explanations about your example. The explanations will only show up if you add an example, too.",
           "placeholder": "Please remember that you were not expected to come up with the exact same solution. It's just a good example."
         },
         {
