Fix missing double quote

--- a/language/fi.json
+++ b/language/fi.json
@@ -265,7 +265,7 @@
     {
       "label": "Navigaation teksti",
       "description": "Teksti ruudunlukijoille.",
-      "default": Navigoitiin esimerkkivastaukseen tekstialueen jälkeen."
+      "default": "Navigoitiin esimerkkivastaukseen tekstialueen jälkeen."
     }
   ]
 }
