--- a/language/ru.json
+++ b/language/ru.json
@@ -198,7 +198,7 @@
         },
         {
           "label": "Заглушить чувствительность",
-          "description": "Эта настройка поможет установить, будет ли \"чувствительность\" активирована для всех ключевых слов."
+          "description": "Эта настройка поможет установить, будет ли \"чувствительность\" активирована для всех ключевых слов.",
           "options": [
             {
               "label": "Разрешить"
