Corrected JSON formatting of el.json
Weblate complains about the syntax of the JSON file and I think this is not standard-compliant.

--- a/language/el.json
+++ b/language/el.json
@@ -190,11 +190,11 @@
         },
         {
           "label": "Ποσοστό επιτυχίας",
-          "description": "Ποσοστό που απαιτείται για να θεωρηθεί η προσπάθεια επιτυχημένη",
+          "description": "Ποσοστό που απαιτείται για να θεωρηθεί η προσπάθεια επιτυχημένη"
         },
         {
           "label": "Ποσοστό αριστείας",
-          "description": "Ποσοστό που απαιτείται για να θεωρηθεί η προσπάθεια άριστη",
+          "description": "Ποσοστό που απαιτείται για να θεωρηθεί η προσπάθεια άριστη"
         },
         {
           "label": "Αντικατάσταση προεπιλεγμένης ρύθμισης για τη διάκριση πεζών - κεφαλαίων",
