--- a/language/ru.json
+++ b/language/ru.json
@@ -131,17 +131,17 @@
               "label": "По умолчанию"
             }
           ],
-          "label": "Определить обычную обратную связь для любого интервала баллов",
-          "description": "Нажмите кнопку \"Добавить интервал\" для добавления необходимого количества интервалов. Пример: 0-20% Низкий результат, 21-91% Средний результат, 91-100% Отличный результат!",
-          "entity": "интервал",
+          "label": "Определить обычную обратную связь для любого диапазона баллов",
+          "description": "Нажмите кнопку \"Добавить диапазон\" для добавления необходимого количества диапазонов. Пример: 0-20% Низкий результат, 21-91% Средний результат, 91-100% Отличный результат!",
+          "entity": "диапазон",
           "field": {
             "fields": [
               {
-                "label": "Интервал баллов"
+                "label": "Диапазон баллов"
               },
               {},
               {
-                "label": "обратная связь для определённого интервала баллов",
+                "label": "обратная связь для определённого диапазона баллов",
                 "placeholder": "Заполните обратную связь"
               }
             ]
@@ -151,7 +151,7 @@
     },
     {
       "label": "Настройки",
-      "description": "Эти настройки помогут определить контроль поведения задания.",
+      "description": "Эти настройки помогут вам управлять поведением задания.",
       "fields": [
         {
           "label": "Минимальное число символов",
@@ -186,7 +186,7 @@
         },
         {
           "label": "Баллы в главной среде",
-          "description": "Используется для начисления баллов в среде только за ответы (скрыто от учащихся)."
+          "description": "Используется для начисления баллов в среде только за ответы (скрыто от пользователей)."
         },
         {
           "label": "Проходной процент",
@@ -259,12 +259,12 @@
     },
     {
       "label": "Ваш результат (не отображается)",
-      "description": "Текст, используемый для readspeakers. @score будет заменено количеством баллов. @total будет заменено на максимальное возможное количество баллов.",
+      "description": "Текст, используемый для ассистирующих технологии. @score будет заменено количеством баллов. @total будет заменено на максимальное возможное количество баллов.",
       "default": "У тебя @score из @total баллов"
     },
     {
       "label": "Сообщение о навигации (не отображается)",
-      "description": "Текст, используемый для readspeakers",
+      "description": "Текст, используемый для ассистирующих технологии",
       "default": "Навигация после текстовой области примера решения."
     }
   ]
