--- a/language/ru.json
+++ b/language/ru.json
@@ -259,12 +259,12 @@
     },
     {
       "label": "Ваш результат (не отображается)",
-      "description": "Текст, используемый для readspeakers. @score будет заменено количеством баллов. @total будет заменено на максимальное возможное количество баллов.",
+      "description": "Текст, используемый для ассистирующих технологии. @score будет заменено количеством баллов. @total будет заменено на максимальное возможное количество баллов.",
       "default": "У тебя @score из @total баллов"
     },
     {
       "label": "Сообщение о навигации (не отображается)",
-      "description": "Текст, используемый для readspeakers",
+      "description": "Текст, используемый для ассистирующих технологии",
       "default": "Навигация после текстовой области примера решения."
     }
   ]
