--- a/language/it.json
+++ b/language/it.json
@@ -266,6 +266,18 @@
       "label": "Messaggio di navigazione (non visualizzato)",
       "description": "Testo di accessibilità utilizzato per lettori vocali",
       "default": "Passato alla soluzione di esempio appena inclusa dopo l'area di testo"
+    },
+    {
+      "label": "Assistive technology description for \"Check\" button",
+      "default": "Check the answers."
+    },
+    {
+      "label": "Assistive technology description for \"Show Solution\" button",
+      "default": "Show the solution. You will be provided with a sample solution."
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. You can improve your previous answer if the author allowed that."
     }
   ]
 }
