--- a/language/de.json
+++ b/language/de.json
@@ -266,6 +266,18 @@
       "label": "Navigationsmeldung (nicht angezeigt)",
       "description": "Anzeigetext für Readspeakers (Barrierefreiheit)",
       "default": "Unterhalb des Texteingabefeldes wurde eine Musterlösung eingefügt. Dorthin navigiert."
+    },
+    {
+      "label": "Assistive technology description for \"Check\" button",
+      "default": "Check the answers."
+    },
+    {
+      "label": "Assistive technology description for \"Show Solution\" button",
+      "default": "Show the solution. You will be provided with a sample solution."
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. You can improve your previous answer if the author allowed that."
     }
   ]
 }
