--- a/language/et.json
+++ b/language/et.json
@@ -266,6 +266,18 @@
       "label": "Navigatsioonisõnum (seda ei näidata)",
       "description": "Ligipääsetavuse tekst lugeritele kasutamiseks.",
       "default": "Navigeeriti vastsisaldatud näidislahendusele tekstiala järel."
+    },
+    {
+      "label": "Assistive technology description for \"Check\" button",
+      "default": "Check the answers."
+    },
+    {
+      "label": "Assistive technology description for \"Show Solution\" button",
+      "default": "Show the solution. You will be provided with a sample solution."
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. You can improve your previous answer if the author allowed that."
     }
   ]
 }
