--- a/language/nb.json
+++ b/language/nb.json
@@ -266,6 +266,18 @@
       "label": "Navigation message (not displayed)",
       "description": "Accessibility text used for readspeakers",
       "default": "Navigated to newly included sample solution after textarea."
+    },
+    {
+      "label": "Assistive technology description for \"Check\" button",
+      "default": "Check the answers."
+    },
+    {
+      "label": "Assistive technology description for \"Show Solution\" button",
+      "default": "Show the solution. You will be provided with a sample solution."
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. You can improve your previous answer if the author allowed that."
     }
   ]
 }
