--- a/language/ru.json
+++ b/language/ru.json
@@ -266,6 +266,18 @@
       "label": "Сообщение о навигации (не отображается)",
       "description": "Текст, используемый для ассистирующих технологии",
       "default": "Навигация после текстовой области примера решения."
+    },
+    {
+      "label": "Assistive technology description for \"Check\" button",
+      "default": "Check the answers."
+    },
+    {
+      "label": "Assistive technology description for \"Show Solution\" button",
+      "default": "Show the solution. You will be provided with a sample solution."
+    },
+    {
+      "label": "Assistive technology description for \"Retry\" button",
+      "default": "Retry the task. You can improve your previous answer if the author allowed that."
     }
   ]
 }
