ji-2771 Add submit text

--- a/language/fr.json
+++ b/language/fr.json
@@ -227,6 +227,10 @@
       "default": "Vérifier"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Texte pour le bouton \"Recommencer\"",
       "default": "Recommencer"
     },
