--- a/language/af.json
+++ b/language/af.json
@@ -227,6 +227,10 @@
       "default": "Toets"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Teks vir \"Probeer weer\" knoppie",
       "default": "Probeer weer"
     },
