--- a/language/de.json
+++ b/language/de.json
@@ -227,6 +227,10 @@
       "default": "Überprüfen"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Beschriftung des \"Wiederholen\"-Buttons",
       "default": "Wiederholen"
     },
