--- a/language/el.json
+++ b/language/el.json
@@ -227,6 +227,10 @@
       "default": "Έλεγχος"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Ετικέτα κουμπιού νέας προσπάθειας",
       "default": "Επανάληψη"
     },
