--- a/language/et.json
+++ b/language/et.json
@@ -227,6 +227,10 @@
       "default": "Kontrolli"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Tekst \"Proovi uuesti\" nupule",
       "default": "Proovi uuesti"
     },
