--- a/language/fi.json
+++ b/language/fi.json
@@ -227,6 +227,10 @@
       "default": "Tarkista"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Painikkeen \"Retry\" teksti",
       "default": "Yritä uudelleen"
     },
