--- a/language/gl.json
+++ b/language/gl.json
@@ -227,6 +227,10 @@
       "default": "Comprobar"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Texto para o botón \"Reintentar\"",
       "default": "Reintentar"
     },
