--- a/language/nb.json
+++ b/language/nb.json
@@ -227,6 +227,10 @@
       "default": "Check"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Text for \"Retry\" button",
       "default": "Retry"
     },
