--- a/language/ru.json
+++ b/language/ru.json
@@ -227,6 +227,10 @@
       "default": "Проверить"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Текст для кнопки \"Повторить\" ",
       "default": "Повторить"
     },
