--- a/language/sl.json
+++ b/language/sl.json
@@ -227,6 +227,10 @@
       "default": "Preveri"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "Besedilo za gumb \"Poskusi ponovno\"",
       "default": "Poskusi ponovno"
     },
