--- a/language/eu.json
+++ b/language/eu.json
@@ -227,6 +227,10 @@
       "default": "Egiaztatu"
     },
     {
+      "label": "Text for \"Submit\" button",
+      "default": "Submit"
+    },
+    {
       "label": "\"Saiatu berriro\" botoiarentzako testua",
       "default": "Berriz saiatu"
     },
