--- a/language/de.json
+++ b/language/de.json
@@ -228,7 +228,7 @@
     },
     {
       "label": "Beschriftung des \"Absenden\"-Buttons",
-      "default": "Submit"
+      "default": "Absenden"
     },
     {
       "label": "Beschriftung des \"Wiederholen\"-Buttons",
