--- a/language/es.json
+++ b/language/es.json
@@ -219,6 +219,18 @@
               "label": "Deshabilitada"
             }
           ]
+        },
+        {
+          "label": "Replacement for line breaks",
+          "description": "By default, line breaks will be replaced with a space character. If you want to check for line breaks, e.g. in regular expressions, you can set a different replacement here.",
+          "options": [
+            {
+              "label": "space"
+            },
+            {
+              "label": "line break (\\n)"
+            }
+          ]
         }
       ]
     },
