--- a/language/de.json
+++ b/language/de.json
@@ -221,14 +221,14 @@
           ]
         },
         {
-          "label": "Replacement for line breaks",
-          "description": "By default, line breaks will be replaced with a space character. If you want to check for line breaks, e.g. in regular expressions, you can set a different replacement here.",
+          "label": "Ersatz für Zeilenumbrüche",
+          "description": "Standardmäßig werden Zeilenumbrüche durch ein Leerzeichen ersetzt. Falls du auf Zeilenumbrüche prüfen willst, etwa in regulären Ausdrücken, kannst du hier ein anderes Ersatzzeichen wählen.",
           "options": [
             {
-              "label": "space"
+              "label": "Leerzeichen"
             },
             {
-              "label": "line break (\\n)"
+              "label": "Zeilenumbruch (\\n)"
             }
           ]
         }
